Stop fighting bootstrap and embrace the collapsed navbar

--- a/assets/styles/style.css
+++ b/assets/styles/style.css
@@ -6,26 +6,3 @@ body {
 svg path {
     fill: #000;
 }
-
-/* Don't collapse navbar on smaller screens (https://stackoverflow.com/a/23536146/399105) */
-.navbar-collapse.collapse {
-  display: block !important;
-}
-.navbar-header>li, .navbar-header, .navbar-nav>li, .navbar-nav {
-  float: left !important;
-  margin: 0;
-}
-.navbar-nav>li>a {
-  padding-bottom: 15px;
-  padding-top: 15px;
-}
-.navbar-nav.navbar-right:last-child {
-  margin-right: -15px !important;
-}
-.navbar-right {
-  float: right !important;
-}
-
-.navbar-nav:first-child {
-  margin-left: -15px;
-}
